--- a/resume6.css
+++ b/resume6.css
@@ -2,7 +2,8 @@
 *{
     font-weight: normal;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
+ 
+/*Styling the image and menu bar*/
 }
 header{
     background: #4B4A54;
@@ -10,54 +11,123 @@ header{
     font-size: small;
     border-style:double;
     display: flex;
-    padding: 40px;
 }
-
 .photo{
-    width: 200px;
-    height: 350px;
+    width: 300px;
+    height: 380px;
     border-radius: 50% 50%;
     border: 8px solid white;
-    margin-top: 50px;
-    margin-left:20px;
-    flex: 2p;
-    
+    position: absolute;
+    top: 155px;
+    left: 40px;
+    flex: 3;
 }
-
 #intro{
-    flex: 8;
-    padding: 20px;
-    padding-top: 80px;
-    
+    flex: 4;
+    padding: 50px;
+    position: relative;
+    left: 30%;
 }
-
-#int{
-    border: 15px solid black;
-    padding: 30px;
-    border-radius: 30px 30px;
-}
-
-section{
-    margin: 30px;
-    padding: 30px;
-}
-
 .menu{
     display: block;
     text-decoration: none;
+    text-align: center;
     padding: 20px 10px;
     background: #677381;
     margin: 16px;
     cursor: pointer;
-    margin-left: 10%;
-    box-shadow: 5px 10px #4B4A54;
-    width: 70%;
+    box-shadow: 5px 10px #a7a5b4;
+    width: 30%;
 }
-
 .menu:hover{
     background-color: pink;
 }
 
+/* Introductory statement */
+.about{
+    display: flex;
+    padding: 40px;
+}
+#int{
+    padding: 10px;
+    flex: 5; 
+    text-align: left;
+}
+#calldet{
+    padding: 8px;
+    flex: 2; 
+    text-align: left;
+}
+#calldetails{
+    padding: 8px;
+    flex: 2; 
+    text-align: left;
+}
+
+article{
+    background: #B9B9B9;
+}
+
+/* Education history */
+.edu{
+    display: flex;
+}
+#qual1{
+    text-align: left;
+    padding: 10px;
+    flex: 4;
+    text-align: start;
+}
+#qual01{
+    flex: 10;
+    padding: 10px;
+    left: 50px;
+}
+
+.edu1{
+    display: flex;
+}
+#qual2{
+    text-align: left;
+    padding: 10px;
+    flex: 4;
+}
+#qual02{
+    flex: 10;
+    padding: 10px;
+    left: 50px;
+}
+
+table{
+    border-collapse: 20px collapse;
+    letter-spacing: 1px;
+    border-spacing: 10px 10px;
+    width: 100%;
+    height: 50px;
+}
+td{
+    text-align: center;
+    padding: 20px;
+    height: 40px;
+    vertical-align: middle;
+}
+
+
+.exper{
+    text-align: center;
+}
+
+.skill{
+  text-align: center;
+}
+
+footer{
+    background: #887177;
+    text-align: center;
+}
+
+
+/* button back to the top */
 .btotop{
     position: fixed;
     bottom: 10px;
@@ -71,39 +141,3 @@ section{
     box-shadow: 5px 10px #030303;
     width: 70px;
 }
-
-.edu{
-    background: #B9B9B9;
-    border-style: hidden;
-    display: flex;
-}
-
-#quals{
-    padding:50px;
-    top: 10px;
-    flex: 3px;
-    position: relative;
-    top: 20px;
-    
-}
-
-#details{
-    padding:50px ;
-    flex:7;
-}
-
-
-
-.exper{
-    background: #47817F;
-    text-align: center;
-}
-
-.skill{
-    background: #4B4A54;
-}
-
-footer{
-    background: #887177;
-}
-
